# IconTeamBuilder

./: README.md  main.py  new_main.py  pyproject.toml
csp/: csp.py
dataset/: pokemon_cleaned.csv  pokemon_strength_scores.csv
supervised_learning/: gradient_tree.py  pokemon_strength_scores.csv  ranking.py  strength_ranker_lgbm.pkl  tester.py
unsupervised_learning/: diary.py  experiment_runner.py  grid_search.py  pokemon_clusters.csv  role_analyzer.py
